# Net

./: .gitignore  FEATURE_ROADMAP.md  IMPROVEMENTS.md  QUICK_START.md  README.md  RELEASE.md  TROUBLESHOOTING.md  build-release.ps1  build.ps1  installer.iss
.github/workflows/: release.yml
cpp_core/: CMakeLists.txt
cpp_core/include/: common_includes.h  core.h  dns_api.h  dns_apply_windows.h  dns_catalog.h  dns_latency.h  dns_packet.h  dns_resolver.h  dns_statistics.h  dns_types.h  dns_validator.h  errors.h  json_serializer.h  logger.h  network_types.h  network_windows.h  win_utils.h
cpp_core/src/: api.cpp  core.cpp  dns_apply_windows.cpp  dns_catalog.cpp  dns_latency.cpp  dns_packet.cpp  dns_resolver.cpp  dns_statistics.cpp  dns_validator.cpp  json_serializer.cpp  logger.cpp  network_windows.cpp  utils.cpp
windows_gui/: App.xaml  App.xaml.cs  DNSChanger.csproj  MainWindow.xaml  MainWindow.xaml.cs  Shell.xaml  Shell.xaml.cs  app.manifest
windows_gui/Converters/: BoolToColorConverter.cs  BoolToVisibilityConverter.cs  LatencyColorConverter.cs  OpacityConverter.cs  TestButtonTextConverter.cs
windows_gui/Models/: AppSettings.cs  DnsModel.cs  DnsProfile.cs  NetworkDriverModel.cs  NetworkModel.cs
windows_gui/Resources/: Styles.xaml
windows_gui/Services/: AdminService.cs  DnsInterop.cs  DnsService.cs  SettingsService.cs  UiService.cs
windows_gui/ViewModels/: MainViewModel.cs
windows_gui/Views/: AddCustomDnsWindow.xaml  AddCustomDnsWindow.xaml.cs  SettingsWindow.xaml  SettingsWindow.xaml.cs
